--- a/package.yaml
+++ b/package.yaml
@@ -1,5 +1,6 @@
 name: netsim
 version: 0.0.0.0
+ghc-options: -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction -fwarn-unused-do-bind
 dependencies:
   - base
   - containers
