Basic _real_ network infrastructure working

--- a/package.yaml
+++ b/package.yaml
@@ -8,8 +8,10 @@ dependencies:
   - vty
   - microlens
   - microlens-th
+  - microlens-mtl
   - mtl
   - socket
+  - bytestring
 
 library:
   exposed-modules: NetSim.Core
