Post-POPL revisions

--- a/package.yaml
+++ b/package.yaml
@@ -17,6 +17,7 @@ dependencies:
   - stm
   - random
   - mmorph
+  - QuickCheck
 
 library:
   exposed-modules: 
@@ -25,6 +26,7 @@ library:
     - NetSim.Language
     - NetSim.Examples.Calculator.Calculator
     - NetSim.Interpretations.WebSockets
+    - NetSim.Examples.PADL
   source-dirs: src
 
 executables:
