--- a/stack.yaml
+++ b/stack.yaml
@@ -1,1 +1,6 @@
 resolver: nightly-2018-02-23
+extra-deps:
+- liquid-fixpoint-0.7.0.7
+- located-base-0.1.1.1
+- dotgen-0.4.2
+- fgl-visualize-0.1.0.1
